After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786212 - Sometimes an error message dialog changes position on screen when "show more details" is clicked
Sometimes an error message dialog changes position on screen when "show more ...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.24.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-12 20:24 UTC by Strangiato
Modified: 2018-04-07 22:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bug demonstration (202.59 KB, video/webm)
2017-08-12 20:24 UTC, Strangiato
Details

Description Strangiato 2017-08-12 20:24:38 UTC
Created attachment 357491 [details]
bug demonstration

Watch the screencast please.
Comment 1 Carlos Soriano 2017-08-13 20:27:26 UTC
That's terrible. And the "show more details" is terrible too :/
Let's put for newcomers, to just remove the "show more details" and put the error as a description or something.
Comment 2 Alexandru Fazakas 2018-04-07 22:22:05 UTC
I think this needs to be closed, as it's been fixed by https://gitlab.gnome.org/GNOME/nautilus/merge_requests/41/diffs?commit_id=28ae2d032bf11c12704f950ab21f33070c14e45b
Comment 3 António Fernandes 2018-04-07 22:36:13 UTC
Indeed. Thanks for reminding. Closing.