eel/eel-gtk-extensions.c: Remove expander showing error details

Creating directories within read-only ones is not allowed and appropriate
error messages pop up.

Trying to create a directory within a read-only directory opens a window
showing the error. Within the window, an expander shows the error details.
Whenever the expander is clicked, the window moves unexpectedly.
We need to fix this as the behaviour is not normal and doesn't look good.

In order to fix the issue, we removed the expander and included the error
details as a label inside the dialog box itself.

https://bugzilla.gnome.org/show_bug.cgi?id=786212